Partial translation for the Security Server

--- a/src/proxy-ui/config/locales/views_pt-BR.yml
+++ b/src/proxy-ui/config/locales/views_pt-BR.yml
@@ -231,61 +231,61 @@ en:
       server_dns_or_ip: "DNS ou IP Público deste servidor seguro"
       no_keys: "Nenhum objeto encontrado"
       unregister_cert_confirm: "Tem certeza que deseja cancelar o registro do certificado '{{hash}}'?"
-      delete_cert_from_conf_confirm: "Are you sure you want to delete certificate '{{hash}}' from server configuration?"
-      delete_cert_from_token_confirm: "Are you sure you want to delete certificate '{{hash}}' from token '{{token}}'?"
-      delete_csr_confirm: "Are you sure you want to delete the request notice?"
-      locked: "BLOCKED"
-      logout: "Logout"
-      delete_key_confirm: "Delete key '{{key}}' and all associated certificates from server configuration?"
-      delete_key_from_token_confirm: "Delete key '{{key}}' from token '{{token}}'?"
-      delete_key_and_unregister_certs_confirm: "Key '{{key}}' has certificates that need to be unregistered before deletion. Continue with unregistration and deletion of associated certifcates and the key from server configuration?"
+      delete_cert_from_conf_confirm: "Você tem certeza que deseja excluir o certificado '{{hash}}' deste servidor?"
+      delete_cert_from_token_confirm: "Você tem certeza que deseja excluir o certificado '{{hash}}' do token '{{token}}'?"
+      delete_csr_confirm: "Tem certeza que deseja excluir o CSR?"
+      locked: "BLOQUEADO"
+      logout: "Sair"
+      delete_key_confirm: "Remover chave '{{key}}' e todos os certificados associados deste servidor?"
+      delete_key_from_token_confirm: "Remover chave '{{key}}' do token '{{token}}'?"
+      delete_key_and_unregister_certs_confirm: "A chave '{{key}}' possui certificados que precisam ter o registro cancelado antes de ser excluída. Deseja enviar solcitações de cancelamento de registro dos certificados associados e proceder com a exclusão da chave?"
       token: "Token: "
-      key: "Key: "
+      key: "Chave: "
     token_details:
-      friendly_name: "Friendly name"
-      token_info: "Token Info"
-      token_id: "Token ID"
+      friendly_name: "Descrição"
+      token_info: "Informação"
+      token_id: "ID do Token"
     key_details:
-      friendly_name: "Friendly name"
-      friendly_name_hint: "The key can be renamed after importing a certificate or creating a CSR."
-      key_info: "Key Info"
-      key_id: "Key ID"
-      readonly: "Read-Only"
+      friendly_name: "Descrição"
+      friendly_name_hint: "A chave pode ser renomeada depois que um CSR é criado ou um certificado é anexado."
+      key_info: "Informações"
+      key_id: "ID da chave"
+      readonly: "Apenas leitura"
 
   shared:
     cert_details_dialog:
-      cert_details: "Certificate Details"
+      cert_details: "Detalhes do certificado"
 
   sysparams:
     index:
-      tsps: "Timestamping Services"
-      tsp_name: "Timestamping service"
-      tsp_url: "Service URL"
-      internal_ssl_cert: "Internal TLS Certificate"
-      internal_ssl_cert_hash: "Certificate hash (%{alg})"
-      internal_ssl_generate_key: "Generate New TLS Key"
-      internal_ssl_generate_csr: "Generate Certificate Request"
-      generate_internal_ssl_confirm: "Generate new internal TLS key and certificate?"
+      tsps: "Serviço de Carimbo de Tempo"
+      tsp_name: "Carimbo de Tempo"
+      tsp_url: "URL do Serviço"
+      internal_ssl_cert: "Certificado TLS interno"
+      internal_ssl_cert_hash: "Hash do certificado (%{alg})"
+      internal_ssl_generate_key: "Gerar nova chave TLS"
+      internal_ssl_generate_csr: "Gerar CSR"
+      generate_internal_ssl_confirm: "Deseja gerar uma nova chave e certificado TLS para este servidor?"
       distinguished_name: "Distinguished name"
-      import_certificate: "Import certificate"
-      certificate_authorities: "Approved Certificate Authorities"
+      import_certificate: "Importar Certificado"
+      certificate_authorities: "Autoridades Certificadoras Aprovadas"
       ca_name: "Distinguished Name"
-      ocsp_response: "OCSP response"
-      expires: "Expires"
-      expired: "expired"
-      issuer: "Issuer: "
-      top_ca: "top-level CA"
+      ocsp_response: "Resposta OCSP"
+      expires: "Expira em"
+      expired: "Expirada"
+      issuer: "Emissor: "
+      top_ca: "AC Raiz"
     tsp_add_dialog:
-      add_tsp: "Add Timestamping Service"
-      approved_tsp: "Trusted Timestamping Services"
+      add_tsp: "Adicionar Serviço de Carimbo de Tempo"
+      approved_tsp: "Autoridades de Carimbo de Tempo Aprovadas"
 
   layouts:
     application:
-      title: "Security Server Administration"
-      server_type: "Security Server"
+      title: "Servidor Seguro UI"
+      server_type: "Servidor Seguro"
 
   anchor:
-    title: "Configuration Anchor"
-    import_title: "Import Configuration Anchor"
-    upload_title: "Upload Configuration Anchor"
-    upload_confirm: "Configuration anchor details: <table style=\"margin: 1em 0px;\" class=\"details\"><tbody><tr><td class=\"semibold\">Hash ({{hash_algorithm}})</td><td>{{hash}}</td></tr><tr><td class=\"semibold\">Generated</td><td>{{generated_at}}</td></tr></tbody></table> Continue with import?"
+    title: "Âncora de Configuração"
+    import_title: "Importar âncora"
+    upload_title: "Carregar âncora"
+    upload_confirm: "Dados da âncora de configuração: <table style=\"margin: 1em 0px;\" class=\"details\"><tbody><tr><td class=\"semibold\">Hash ({{hash_algorithm}})</td><td>{{hash}}</td></tr><tr><td class=\"semibold\">Gerada em</td><td>{{generated_at}}</td></tr></tbody></table> Deseja continuar?"
