--- a/src/proxy-ui/config/locales/views_pt-BR.yml
+++ b/src/proxy-ui/config/locales/views_pt-BR.yml
@@ -65,7 +65,7 @@ en:
       details: "Detalhes"
       add_group: "Adicionar grupo"
       code: "Código"
-      member_count: "Número de membros"
+      member_count: "Membros"
       updated: "Atualizado"
       new_group: "Novo grupo"
 
