--- a/src/proxy-ui/config/locales/views_pt-BR.yml
+++ b/src/proxy-ui/config/locales/views_pt-BR.yml
@@ -110,6 +110,7 @@ pt-BR:
       client_services: "Serviços"
       add_wsdl: "Adicionar WSDL"
       add_openapi3: "Adicionar REST"
+      add_endpoint: "Addicionar endpoint"
       access_rights: "Permissões"
       service_code: "Código do serviço"
       title: "Título"
@@ -123,7 +124,18 @@ pt-BR:
       edit_wsdl_parameters: "Editar parâmetros do WSDL"
       edit_openapi3_parameters: "Editar parâmetros do REST"
       delete_wsdls_confirm: "Você tem certeza que deseja excluir os serviços selecionados?"
-      wsdl_validator_output: "Validar Resposta"
+      delete_endpoint_confirm: "Você tem certeza que deseja excluir endpoints selecionados?"
+      wsdl_validator_output: "Resultado do Validador"
+      endpoint_path: "Path"
+      http_request_method: "Método HTTP"
+      url_type: "Tipo de URL"
+      rest_api_base_path: "Base da API REST (base path)"
+      openapi3_description: "Descrição no formato OpenAPI 3"
+      edit_rest_endpoint_parameters: "Editar parâmetros do endpoint OpenAPI 3"
+      rest_endpoint_helper_1: "Os caminhos são relativos ao base path, ex.: '/pets'. O asterisco (*) pode ser usado como caractere especial"
+      rest_endpoint_helper_2: "* = corresponde à um ou mais segmentos."
+      rest_endpoint_helper_3: "** = corresponde à zero or mais segmentos, e.g. '/pets/**'."
+      rest_endpoint_helper_4: "Os parâmetros do edereço podem ser substituídos por um asterisco, ex.: '/pets/{id}/images' => '/pets/*/images'."
 
     service_params_dialog:
       edit_service_parameters: "Editar parâmetros do serviço"
@@ -138,6 +150,7 @@ pt-BR:
       title_with_service_title: "Permissões para o serviço: {{code}} ({{title}})"
       access_rights: "Permissões"
       service: "Serviço"
+      endpoint: "Endpoint"
       member_name_group_desc: "Nome/Grupo do Membro"
       member_class: "Classe"
       member_group_code: "Código do Membro/Grupo"
