--- a/src/proxy-ui/config/locales/views_pt-BR.yml
+++ b/src/proxy-ui/config/locales/views_pt-BR.yml
@@ -205,9 +205,9 @@ pt-BR:
     index:
       heading: "Configuração Inicial"
       security_server_owner: "Proprietário"
-      member_name: "Membro"
-      member_class: "Classe"
-      member_code: "Cåodigo"
+      member_name: "Nome do Membro"
+      member_class: "Classe do membro"
+      member_code: "Código do membro"
       security_server: "Servidor Seguro"
       security_server_code: "Código único"
       software_token: "Token gerador de chaves A1"
@@ -233,8 +233,8 @@ pt-BR:
       label: "Label"
       import_certificate: "Importar certificado"
       usage: "Uso"
-      usage_sign: "Entrar"
-      usage_auth: "Authenticar"
+      usage_sign: "Assinatura"
+      usage_auth: "Autenticação"
       approved_ca: "Autoridade Certificadora"
       csr_format: "Formato do CSR"
       subject_dn: "Subject Distinguished Name"
